# robotics

EE3100704/: CMakeLists.txt  README.md  initial_setup.sh
EE3100704/examples/: CMakeLists.txt
EE3100704/examples/include/: canine.h  kinova.h
EE3100704/examples/include/Variables/: SharedMemory.cpp  SharedMemory.h  Variable.h
EE3100704/examples/rsc/canine/urdf/: canineV4_2.urdf
EE3100704/examples/src/: canine.cpp  kinova.cpp  main.cpp  robot.cpp
EE3100704/examples/src/robot_UI/robot_ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  robot_ui.pro
EE3100704/tools/include/: FourthOrderTrajectoryGenerator.cpp  FourthOrderTrajectoryGenerator.h  cubicTrajectoryGenerator.h  cubicTrajectoryGenerator.hpp  forceTrajectoryGenerator.h  robotController.hpp  setObstacle.hpp  setTime.hpp
EE3100704/tools/src/: cubicTrajectoryGenerator.cpp  forceTrajectoryGenerator.cpp  robotController.cpp  setObstacle.cpp  setTime.cpp
